--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,280 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '~@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$frontend-bestcombo-primary: mat.define-palette(mat.$indigo-palette);
+$frontend-bestcombo-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$frontend-bestcombo-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$frontend-bestcombo-theme: mat.define-light-theme((
+  color: (
+    primary: $frontend-bestcombo-primary,
+    accent: $frontend-bestcombo-accent,
+    warn: $frontend-bestcombo-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($frontend-bestcombo-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+.mat-drawer-container {
+  background-color: #C92020;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  color: #FFF;
+}
+
+.mat-h1, .mat-headline, .mat-typography h1 {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  color: #FFF;
+  font-weight: 800;
+}
+
+.mat-h2, .mat-title, .mat-typography h2 {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  color: #FFF;
+  font-weight: 500;
+}
+
+.mat-h3, .mat-subheading-2, .mat-typography h3 {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  color: #FFF;
+}
+
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  box-sizing: border-box;
+}
+
+.mat-form-field, .mat-form-field-disabled {
+  display: block !important;
+}
+
+.mat-button, .mat-stroked-button {
+  background-color: #FFFFFF;
+  color: #C92020;
+  font-weight: 700;
+}
+
+.mat-button, .mat-raised-button, .mat-stroked-button, .mat-flat-button, .mat-fab, .mat-mini-fab {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  font-size: 20px;
+}
+
+
+.mat-button, .mat-stroked-button, .mat-flat-button {
+  line-height: 55px !important;
+  min-width: 200px !important;
+}
+
+@media (min-width: 768px) {
+  .left-md-divider {
+    border-left: 1px solid #FFF;
+  }
+}
+
+/*XS*/
+@media (max-width: 575px) {
+
+}
+
+/*SM*/
+@media (min-width: 576px) {
+
+}
+
+/*MD*/
+@media (min-width: 768px) {
+
+}
+
+/*LG*/
+@media (min-width: 992px) {
+
+}
+
+/*XL*/
+@media (min-width: 1200px) {
+
+}
+
+/*XXL*/
+@media (min-width: 1400px) {
+
+}
+
+app-logo {
+  display: inline !important;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex, .mat-form-field-appearance-fill.mat-form-field-disabled .mat-form-field-flex {
+  background-color: #FFFFFF;
+}
+
+.mat-form-field {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+}
+
+.mat-form-field.inverso {
+  margin: 10px 0;
+}
+
+.mat-body, .mat-body-1, .mat-typography {
+  font: 400 18px / 20px 'Quicksand', "Helvetica Neue", sans-serif;
+}
+
+.mat-form-field.mat-focused .mat-form-field-label {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.mat-form-field.mat-form-field-invalid .mat-form-field-label {
+  color: #C92020;
+}
+
+.mat-error {
+  color: #FFFFFF;
+}
+
+.mat-error.inverso {
+  color: #C92020 !important;
+}
+
+.mat-form-field-subscript-wrapper {
+  margin-top: 0;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-subscript-wrapper {
+  padding: 0 !important;
+}
+
+.mat-form-field-underline {
+  display: none;
+}
+
+.mat-form-field.inverso .mat-form-field-underline {
+  display: block !important;
+}
+
+.mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #b41d1d;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+  border-radius: 4px !important;
+}
+
+.mat-toolbar {
+  background: #FFFFFF;
+}
+
+.mat-drawer {
+  background-color: #b41d1d;
+}
+
+.mat-list-base .mat-list-item {
+  color: #FFFFFF;
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+}
+
+.container {
+  background: rgba(255, 255, 255, .1);
+  margin: 50px auto;
+  border-radius: 20px;
+}
+
+.mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent {
+  color: #FFFFFF;
+  background-color: #C92020;
+}
+
+.mat-button.inverso {
+  background-color: #C92020 !important;
+  color: #FFFFFF !important;
+}
+
+
+h1.inverso, h2.inverso {
+  color: #C92020 !important;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+
+.mat-button.mat-button-disabled.inverso {
+  background-color: #585858 !important;
+}
+
+
+body {
+  background-color: #C92020;
+}
+
+
+.mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #b41d1d;
+}
+
+.mat-checkbox-frame {
+  background-color: #FFFFFF !important;
+  border-color: #FFFFFF;
+}
+
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  background-color: #FFFFFF;
+}
+
+.mat-checkbox-checkmark {
+  fill: #b41d1d !important;
+}
+
+.mat-checkbox-checkmark-path {
+  stroke: #b41d1d !important;
+}
+
+.mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element, .mat-checkbox:active:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element {
+  background: #b41d1d;
+}
+
+.mat-checkbox-layout .mat-checkbox-label {
+  font-family: 'Quicksand', "Helvetica Neue", sans-serif;
+  color: #FFFFFF;
+}
+
+.mat-dialog-content {
+  margin: 0 !important;
+}
+
+.mat-dialog-container ::-webkit-scrollbar {
+  width: 5px;
+}
+
+.mat-dialog-container ::-webkit-scrollbar-thumb {
+  background-color: #C92020;
+  border-radius: 5px;
+}
