--- a/src/app/core/admin/dashboard/dashboard.component.html
+++ b/src/app/core/admin/dashboard/dashboard.component.html
@@ -1,6 +1,16 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
+      <h2>Valor recebido</h2>
+      <p>{{saldos.valorDisponivel| currency}}</p>
+    </div>
+    <div class="col">
+      <h2>Valor a receber nos proximos 30 dias</h2>
+      <p>{{saldos.valorAReceber| currency}}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
       <h2>
         Solicitações de Saque
       </h2>
