--- a/src/app/core/estabelecimentos/cadastro-estabelecimento/cadastro-estabelecimento.component.html
+++ b/src/app/core/estabelecimentos/cadastro-estabelecimento/cadastro-estabelecimento.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col p-3">
-      <h1>vamos falar do seu estabelecimento?</h1>
+      <h1>Vamos falar do seu estabelecimento?</h1>
     </div>
   </div>
   <div class="row">
     <div class="col p-3">
-      <h2>agora vamos precisar que você fale um pouco sobre o seu estabelecimento</h2>
+      <h2>Agora vamos precisar que você fale um pouco sobre o seu estabelecimento</h2>
     </div>
   </div>
   <div class="row p-3 p-lg-5">
@@ -14,34 +14,43 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
-            <mat-label>nome da estabelecimento</mat-label>
+            <mat-label>Nome da estabelecimento</mat-label>
             <input matInput formControlName="nome">
-            <mat-error *ngIf="formulario.get('nome')?.errors?.required">campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('nome')?.errors?.required">Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
-            <mat-label>cnpj</mat-label>
+            <mat-label>CNPJ</mat-label>
             <input matInput mascara="##.###.###/####-##" formControlName="cnpj" maxlength="18">
-            <mat-error *ngIf="formulario.get('cnpj')?.errors?.required">campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('cnpj')?.errors?.required">Campo obrigatório</mat-error>
             <mat-error
               *ngIf="formulario.get('cnpj')?.errors?.minlength || formulario.get('cnpj')?.errors?.cnpjInvalido">
-              cnpj inválido
+              CNPJ inválido
             </mat-error>
           </mat-form-field>
         </div>
         <div class="col-12">
           <mat-form-field appearance="fill">
-            <mat-label>descrição</mat-label>
+            <mat-label>Descrição</mat-label>
             <textarea matInput formControlName="descricao" maxlength="500"></textarea>
-            <mat-error *ngIf="formulario.get('descricao')?.errors?.required">campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('descricao')?.errors?.required">Campo obrigatório</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field appearance="fill">
+            <mat-label>Telefone</mat-label>
+            <input matInput telefone formControlName="telefone">
+            <mat-error *ngIf="formulario.get('telefone')?.errors?.required">Campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('telefone')?.errors?.minlength">Telefone inválido</mat-error>
           </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
-            <mat-label>imagem</mat-label>
+            <mat-label>Imagem</mat-label>
             <input matInput [formControl]="descricaoImagemInput" maxlength="18">
-            <mat-error *ngIf="formulario.get('imagem')?.errors?.required">campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('imagem')?.errors?.required">Campo obrigatório</mat-error>
             <button mat-icon-button matSuffix type="button" (click)="imagemInput.click()">
               <mat-icon>file_upload</mat-icon>
             </button>
@@ -50,77 +59,76 @@
         <input style="display: none" type="file" accept="image/*" #imagemInput (change)="selecionaImagem($event)">
         <div class="col-12">
           <mat-form-field appearance="fill">
-            <mat-label>categorias</mat-label>
+            <mat-label>Categorias</mat-label>
             <mat-select formControlName="categorias" multiple>
               <mat-option *ngFor="let categoria of categorias"
                           [value]="categoria.codigo">{{categoria.nome}}</mat-option>
             </mat-select>
-            <mat-error *ngIf="formulario.get('categorias')?.errors?.required">campo obrigatório</mat-error>
+            <mat-error *ngIf="formulario.get('categorias')?.errors?.required">Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
       </div>
       <div formGroupName="endereco">
-        <h3>informe o endereço de seu estabelecimento</h3>
+        <h3>Informe o endereço de seu estabelecimento</h3>
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>cep</mat-label>
+              <mat-label>CEP</mat-label>
               <input matInput mascara="#####-###" formControlName="cep">
-              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.required">campo obrigatório</mat-error>
-              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.minlength">cep inválido</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.minlength">CEP inválido</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-12">
             <mat-form-field appearance="fill">
-              <mat-label>rua</mat-label>
+              <mat-label>Rua</mat-label>
               <input matInput formControlName="rua">
-              <mat-error *ngIf="formulario.get('endereco.rua')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.rua')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-12">
             <mat-form-field appearance="fill">
-              <mat-label>bairro</mat-label>
+              <mat-label>Bairro</mat-label>
               <input matInput formControlName="bairro">
-              <mat-error *ngIf="formulario.get('endereco.bairro')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.bairro')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>cidade</mat-label>
+              <mat-label>Cidade</mat-label>
               <input matInput formControlName="cidade">
-              <mat-error *ngIf="formulario.get('endereco.cidade')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.cidade')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>estado</mat-label>
+              <mat-label>Estado</mat-label>
               <input matInput formControlName="estado">
-              <mat-error *ngIf="formulario.get('endereco.estado')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.estado')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>complemento</mat-label>
+              <mat-label>Complemento</mat-label>
               <input matInput formControlName="complemento">
-              <mat-error *ngIf="formulario.get('endereco.complemento')?.errors?.required">campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>número</mat-label>
+              <mat-label>Número</mat-label>
               <input matInput formControlName="numero">
-              <mat-error *ngIf="formulario.get('endereco.numero')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('endereco.numero')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
         </div>
       </div>
-      <button mat-button type="submit" [disabled]="formulario.invalid" (click)="cadastraLoja()">cadastrar</button>
+      <button mat-button type="submit" [disabled]="formulario.invalid" (click)="cadastraLoja()">Cadastrar</button>
     </form>
   </div>
 </div>
