--- a/src/app/core/produtos/lista-produtos-parceiro/lista-produtos-parceiro.component.html
+++ b/src/app/core/produtos/lista-produtos-parceiro/lista-produtos-parceiro.component.html
@@ -1,21 +1,36 @@
 <div class="container">
-  <button mat-button (click)="cadastraProduto()">cadatrar produto</button>
+  <div class="row">
+    <div class="col header-produtos">
+      <h1>Produtos</h1>
+      <div>
+        <button mat-button (click)="cadastraProduto()">Cadastrar produto</button>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
-    <div class="col-12 col-sm-6 col-md-5 col-xl-3 col-lg-4" *ngFor="let produto of produtos">
-      <mat-card>
-        <mat-card-title>{{produto.nome}}</mat-card-title>
-        <mat-card-subtitle>{{produto.descricao}}</mat-card-subtitle>
-        <div class="image-box">
-          <img mat-card-image [src]="getImageUrl(produto)" [alt]="'Foto de ' + produto.nome">
-        </div>
-        <mat-card-content>{{produto.preco | currency : 'BRL' : 'symbol' : '1.2-2' : 'pt_BR'}}</mat-card-content>
-        <mat-card-actions>
-          <button mat-icon-button type="button" (click)="exclui(produto)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
+    <div class="col mt-4 mb-4" *ngIf="!produtos || produtos.length === 0">
+      <p>
+        Você ainda não possui produtos cadastrados, clique no botão <b>"Cadastrar produto"</b> para cadastrar seu
+        primeiro produto.
+      </p>
+    </div>
+    <div class="card-container col">
+      <div *ngFor="let produto of produtos">
+        <mat-card>
+          <mat-card-title>{{produto.nome}}</mat-card-title>
+          <mat-card-subtitle>{{produto.descricao}}</mat-card-subtitle>
+          <div class="image-box">
+            <img mat-card-image [src]="getImageUrl(produto)" [alt]="'Foto de ' + produto.nome">
+          </div>
+          <mat-card-content>{{produto.preco | currency : 'BRL' : 'symbol' : '1.2-2' : 'pt_BR'}}</mat-card-content>
+          <mat-card-actions>
+            <button mat-icon-button type="button" (click)="exclui(produto)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
     </div>
   </div>
 </div>
