--- a/src/app/shared/erro-dialog/erro-dialog.component.html
+++ b/src/app/shared/erro-dialog/erro-dialog.component.html
@@ -1,7 +1,7 @@
 <h1 class="inverso">Ops! ocorreu um erro...</h1>
 <p *ngIf="mensagem">{{mensagem}}</p>
 <div *ngIf="!mensagem">
-  <p *ngFor="let mensagem of data?.erro?.error?.mensagens">{{mensagem}}</p>
+  <p class="inverso" *ngFor="let mensagem of data?.erro?.error?.mensagens">{{mensagem}}</p>
 </div>
 
 <p>
