--- a/src/styles.scss
+++ b/src/styles.scss
@@ -309,3 +309,7 @@ body {
 .mat-card-actions, .mat-card-subtitle, .mat-card-content {
   font-family: 'Quicksand', "Helvetica Neue", sans-serif;
 }
+
+p.inverso {
+  color: #585858;
+}
