--- a/src/app/core/estabelecimentos/lista-estabelecimentos-cliente/lista-estabelecimentos-cliente.component.scss
+++ b/src/app/core/estabelecimentos/lista-estabelecimentos-cliente/lista-estabelecimentos-cliente.component.scss
@@ -1,13 +1,3 @@
-.container {
-  display: flex;
-}
-
-.flex-item {
-  width: 20%;
-  box-sizing: border-box;
-  padding: 5px;
-}
-
 .image-box {
   height: 200px;
   width: calc(100% + 32px);
@@ -16,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #C92020;
+  background-color: #FFFFFF;
 }
 
 .mat-card-subtitle {
