--- a/src/app/core/estabelecimentos/visualiza-estabelecimento/visualiza-estabelecimento.component.html
+++ b/src/app/core/estabelecimentos/visualiza-estabelecimento/visualiza-estabelecimento.component.html
@@ -1,27 +1,30 @@
 <app-header-deslogado></app-header-deslogado>
 <div class="container" *ngIf="estabelecimento">
-  <h1>{{estabelecimento.nome}}</h1>
-  <img [src]="getImageUrl(estabelecimento.imagem)" [alt]="'Foto do estabelecimento ' + estabelecimento.nome">
+  <div class="info-estabelecimento">
+    <h1>{{estabelecimento.nome}}</h1>
+    <img class="imagem-estabelecimento" [src]="getImageUrl(estabelecimento.imagem)"
+         [alt]="'Foto do estabelecimento ' + estabelecimento.nome">
+  </div>
   <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-md-6">
       <h2>Produtos</h2>
-      <div>
-        <div class="flex-item" *ngFor="let produto of produtos">
+      <div class="card-container-2">
+        <div *ngFor="let produto of produtos">
           <a [routerLink]="['/produtos', produto.codigo]">
             <mat-card>
               <mat-card-title>{{produto.nome}}</mat-card-title>
               <div class="image-box">
                 <img mat-card-image [src]="getImageUrl(produto.imagem)" [alt]="'Foto de ' + produto.nome">
               </div>
-              <mat-card-content>{{produto.nome}}</mat-card-content>
+              <mat-card-content>{{produto.descricao}}</mat-card-content>
             </mat-card>
           </a>
         </div>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-12 col-md-6">
       <h2>Serviços</h2>
-      <div>
+      <div class="card-container-2">
         <div class="flex-item" *ngFor="let servico of servicos">
           <a [routerLink]="['/produtos', servico.codigo]">
             <mat-card>
