--- a/src/app/core/produtos/visualiza-produto/visualiza-produto.component.html
+++ b/src/app/core/produtos/visualiza-produto/visualiza-produto.component.html
@@ -2,13 +2,13 @@
 
 <div class="container" *ngIf="produto">
   <h1>{{produto.nome}}</h1>
-  <img [src]="getImageUrl(produto.imagem)" [alt]="'Foto de ' + produto.nome">
+  <img class="imagem-produto" [src]="getImageUrl(produto.imagem)" [alt]="'Foto de ' + produto.nome">
   <p>{{produto.descricao}}</p>
 
   <ul>
-    <li>Valor: {{produto.preco | currency}}</li>
-    <li>Serve: {{produto.quantidadePessoas}} pessoas</li>
-    <li>Categorias: {{getCategorias()}}</li>
+    <li><b>Valor:</b> {{produto.preco | currency}}</li>
+    <li><b>Serve:</b> {{produto.quantidadePessoas}} pessoas</li>
+    <li><b>Categorias:</b> {{getCategorias()}}</li>
   </ul>
 
   <button mat-button type="button" (click)="efetuarPedido()">efetuar pedido</button>
