--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,10 @@ body {
   .card-container > div {
     width: 50% !important;
   }
+
+  .card-container-2 > div {
+    width: 100% !important;
+  }
 }
 
 /*MD*/
@@ -122,12 +126,18 @@ body {
   .card-container > div {
     width: 33.33333333% !important;
   }
+  .card-container-2 > div {
+    width: 50% !important;
+  }
 }
 
 /*XL*/
 @media (min-width: 1200px) {
   .card-container > div {
     width: 25% !important;
+  }
+  .card-container-2 > div {
+    width: 33.33333333% !important;
   }
 }
 
@@ -288,17 +298,21 @@ body {
 }
 
 
-.card-container {
+.card-container, .card-container-2 {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   padding-right: 0;
 }
 
-.card-container > div {
+.card-container > div, .card-container-2 > div  {
   width: 100%;
   box-sizing: border-box;
   padding: 10px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .mat-card-title {
@@ -312,4 +326,15 @@ body {
 
 p.inverso {
   color: #585858;
+}
+
+.image-box {
+  height: 200px;
+  width: calc(100% + 32px);
+  overflow: hidden;
+  margin: 0 -16px 16px -16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
 }
